plugins {
    id 'java'
    id "io.freefair.lombok" version "5.1.0"
    id "org.sonarqube" version "2.8"
}

group 'com.gakshintala.fp'
version '1.0-SNAPSHOT'

repositories {
    jcenter()
}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.addAll(['--enable-preview'])
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform {
        excludeEngines("junit-vintage")
    }
}

dependencies {
    implementation("io.vavr:vavr:+")

    implementation("org.slf4j:slf4j-api:+")
    runtimeOnly("org.apache.logging.log4j:log4j-slf4j18-impl:+")

    testImplementation("org.junit.jupiter:junit-jupiter-api:+")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:+")

}

sonarqube {
    properties {
        property "sonar.exclusions", "src/main/java/app/domain/**"
    }
}
